--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2.2">
     <link rel="stylesheet" href="css/navigation.css?v=1.1">
-    <link rel="stylesheet" href="css/slider-comparison.css?v=1.0">
+
     <link rel="stylesheet" href="css/google-reviews.css?v=1.0">
+
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Favicon -->
@@ -216,7 +217,7 @@
         </div>
         <!-- Simple Down Arrow -->
         <div class="scroll-arrow">
-            <a href="#services">
+            <a href="#qui-sommes-nous">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M12 5v14M5 12l7 7 7-7"></path>
                 </svg>
@@ -355,37 +356,7 @@
         </div>
     </section>
 
-    <!-- Before/After Comparison Section -->
-    <section class="before-after-section">
-        <div class="before-after-container">
-            <h2 class="section-title">Avant / <span class="highlight-text">Après</span></h2>
-            <p class="before-after-subtitle">Découvrez la transformation de nos installations</p>
-            <div class="comparison-slider" id="comparisonSlider">
-                <div class="comparison-wrapper">
-                    <div class="before-image">
-                        <img src="images/image15.jpg" alt="Avant installation - Sécurité avant intervention ZOZO Sécurité" loading="lazy">
-                        <div class="image-label">Avant</div>
-                    </div>
-                    <div class="after-image">
-                        <img src="images/image16.jpg" alt="Après installation - Système de sécurité installé par ZOZO Sécurité" loading="lazy">
-                        <div class="image-label">Après</div>
-                    </div>
-                    <div class="slider-handle" id="sliderHandle">
-                        <div class="handle-line"></div>
-                        <div class="handle-circle">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M15 18l-6-6 6-6"/>
-                            </svg>
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M9 18l6-6-6-6"/>
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <p class="comparison-seo-hint">Installation de caméra de sécurité pour un client à Montpellier - Découvrez la différence avant/après</p>
-        </div>
-    </section>
+
 
     <!-- Partners Section -->
     <section class="partners-section">
@@ -469,7 +440,6 @@
         </div>
     </section>
 
-
     <!-- Video Surveillance Details Section -->
     <section id="video-surveillance" class="service-details">
         <div class="service-details-container">
@@ -530,7 +500,7 @@
             </div>
 
             <div class="projects-section">
-                <h3>Nos <span class="highlight-text">Zones</span> d’Expertise</h3>
+                <h3>Nos <span class="highlight-text">Zones</span> d'Expertise</h3>
                 <div class="project-types">
                     <div class="project-type">
                         <h4>Résidentiel</h4>
@@ -1373,5 +1343,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/css-loader.js"></script>
+
+
 </body>
 </html>
