--- a/index.html
+++ b/index.html
@@ -895,6 +895,39 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="enhanced-slide" data-category="videosurveillance">
+                        <div class="slide-image-container">
+                            <img src="images/image16.jpg" alt="Caméras Bullet Dahua – Sécurisation d'habitation à Castelnau-le-Lez" loading="lazy">
+                            
+                            <button class="zoom-btn" aria-label="Agrandir l'image">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="11" cy="11" r="8"/>
+                                    <path d="m21 21-4.35-4.35"/>
+                                    <line x1="11" y1="8" x2="11" y2="14"/>
+                                    <line x1="8" y1="11" x2="14" y2="11"/>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="enhanced-slide-content">
+                            <div class="slide-category">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="3"/>
+                                    <path d="M20 12c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z"/>
+                                </svg>
+                                VIDÉOSURVEILLANCE RÉSIDENTIELLE
+                            </div>
+                            <h3>Caméras Bullet Dahua – Sécurisation d'habitation à Castelnau-le-Lez</h3>
+                            <p>Installation de deux caméras bullet HD de la marque Dahua sur angle de façade, pour couvrir efficacement les accès latéraux d'une maison individuelle. Pose soignée avec gaines discrètes, orientation croisée pour un champ de vision large, vision nocturne et enregistrement HD via enregistreur connecté. Solution fiable pour dissuasion, levée de doute à distance et tranquillité d'esprit des occupants.</p>
+                            <div class="slide-tags">
+                                <span class="tag">Dahua</span>
+                                <span class="tag">Maison individuelle</span>
+                                <span class="tag">Castelnau-le-Lez</span>
+                                <span class="tag">Vision nocturne</span>
+                                <span class="tag">Enregistrement sécurisé</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Enhanced Navigation Buttons -->
@@ -951,6 +984,10 @@
                     </div>
                     <div class="thumbnail-item" data-slide="11">
                         <img src="images/image14.jpeg" alt="Thumbnail 14" loading="lazy">
+                        <div class="thumbnail-overlay"></div>
+                    </div>
+                    <div class="thumbnail-item" data-slide="12">
+                        <img src="images/image16.jpg" alt="Thumbnail 16" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
                 </div>
