improved the thank you page

--- a/contact.html
+++ b/contact.html
@@ -140,8 +140,7 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="index.html#services" class="nav-link">Services</a>
-                <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html" class="nav-link">ACCUEIL</a>
                 <a href="index.html#realisations" class="nav-link">Réalisations</a>
                 <a href="contact.html" class="nav-link active">Contact</a>
             </div>
@@ -176,8 +175,7 @@
     
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="index.html#services" class="nav-link">Services</a>
-        <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html" class="nav-link">ACCUEIL</a>
         <a href="index.html#realisations" class="nav-link">Réalisations</a>
         <a href="contact.html" class="nav-link active">Contact</a>
         
@@ -206,7 +204,7 @@
             <div class="split-left">
                 <div class="split-left-content">
                     <h1 class="split-headline">
-                        Prêt à <span class="gradient-text">Sécuriser</span> Votre Entreprise?
+                        Prêt à <span class="gradient-text">Sécuriser</span> Votre Propriété?
                     </h1>
                     <p class="split-subtitle">
                         Votre sécurité mérite une attention professionnelle. Découvrons ensemble vos besoins pour vous proposer la solution parfaite.
