--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css?v=2.2">
     <link rel="stylesheet" href="css/navigation.css?v=1.1">
+    <link rel="stylesheet" href="css/realisations.css?v=1.0">
+    <link rel="stylesheet" href="css/partners.css?v=1.0">
 
     <link rel="stylesheet" href="css/google-reviews.css?v=1.0">
 
@@ -962,31 +964,31 @@
                         <img src="images/image7.jpg" alt="Thumbnail 7" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="6">
+                    <div class="thumbnail-item" data-slide="7">
                         <img src="images/image8.jpeg" alt="Thumbnail 8" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="7">
+                    <div class="thumbnail-item" data-slide="8">
                         <img src="images/image9.jpeg" alt="Thumbnail 9" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="8">
+                    <div class="thumbnail-item" data-slide="9">
                         <img src="images/image10.jpeg" alt="Thumbnail 10" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="9">
+                    <div class="thumbnail-item" data-slide="10">
                         <img src="images/image11.jpeg" alt="Thumbnail 11" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="10">
+                    <div class="thumbnail-item" data-slide="11">
                         <img src="images/image12.jpeg" alt="Thumbnail 12" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="11">
+                    <div class="thumbnail-item" data-slide="12">
                         <img src="images/image14.jpeg" alt="Thumbnail 14" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
-                    <div class="thumbnail-item" data-slide="12">
+                    <div class="thumbnail-item" data-slide="13">
                         <img src="images/image16.jpg" alt="Thumbnail 16" loading="lazy">
                         <div class="thumbnail-overlay"></div>
                     </div>
@@ -1073,12 +1075,12 @@
                 <!-- Review 1: Clara Brajon -->
                 <div class="review-card">
                     <div class="review-header">
-                        <div class="reviewer-avatar" style="background: linear-gradient(45deg, #ff3333, #ff5555); color: white; display: flex; align-items: center; justify-content: center; font-weight: 600; font-size: 1.1rem;">CB</div>
+                        <div class="reviewer-avatar reviewer-avatar-red">CB</div>
                         <div class="reviewer-info">
                             <div class="reviewer-name">Clara Brajon</div>
                             <div class="review-date">Il y a 1 semaine</div>
                         </div>
-                        <span class="new-badge" style="background: #ff3333; color: white; padding: 4px 8px; border-radius: 12px; font-size: 0.75rem; font-weight: 600;">NOUVEAU</span>
+                        <span class="new-badge">NOUVEAU</span>
                     </div>
                     <div class="review-rating">
                         <svg class="star" viewBox="0 0 24 24">
@@ -1114,7 +1116,7 @@
                 <!-- Review 2: LAKMA.AKATSUKI -->
                 <div class="review-card">
                     <div class="review-header">
-                        <div class="reviewer-avatar" style="background: linear-gradient(45deg, #4285F4, #5396F5); color: white; display: flex; align-items: center; justify-content: center; font-weight: 600; font-size: 1.1rem;">LA</div>
+                        <div class="reviewer-avatar reviewer-avatar-blue">LA</div>
                         <div class="reviewer-info">
                             <div class="reviewer-name">LAKMA.AKATSUKI</div>
                             <div class="review-date">Il y a 5 semaines</div>
@@ -1154,7 +1156,7 @@
                 <!-- Review 3: Sarah Pereira -->
                 <div class="review-card">
                     <div class="review-header">
-                        <div class="reviewer-avatar" style="background: linear-gradient(45deg, #34A853, #5CBF2A); color: white; display: flex; align-items: center; justify-content: center; font-weight: 600; font-size: 1.1rem;">SP</div>
+                        <div class="reviewer-avatar reviewer-avatar-green">SP</div>
                         <div class="reviewer-info">
                             <div class="reviewer-name">Sarah Pereira</div>
                             <div class="review-date">Il y a 6 semaines</div>
@@ -1181,7 +1183,7 @@
                         Une équipe professionnelle et à l'écoute, ZoZo Sécurité offre un service impeccable! La réactivité des techniciens m'a vraiment impressionné...
                         <button class="read-more-btn" onclick="toggleReviewText(this)">Lire plus</button>
                     </div>
-                    <div style="margin-top: 10px; color: #cccccc; font-size: 0.85rem; font-style: italic;">
+                    <div class="review-metadata">
                         Visité en février
                     </div>
                     <div class="google-badge">
@@ -1198,7 +1200,7 @@
                 <!-- Review 4: sarAy -->
                 <div class="review-card">
                     <div class="review-header">
-                        <div class="reviewer-avatar" style="background: linear-gradient(45deg, #FBBC05, #F9CB9C); color: white; display: flex; align-items: center; justify-content: center; font-weight: 600; font-size: 1.1rem;">S</div>
+                        <div class="reviewer-avatar reviewer-avatar-yellow">S</div>
                         <div class="reviewer-info">
                             <div class="reviewer-name">sarAy</div>
                             <div class="review-date">Il y a 6 semaines</div>
