--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ vidéosurveillance | Zozo Sécurité Montpellier</title>
     <meta name="description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
+    <!-- Critical SEO Enhancement -->
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+    <meta name="revised" content="2025-01-25">
+    <meta name="author" content="ZOZO Sécurité">
+    <meta name="geo.region" content="FR-34">
+    <meta name="geo.position" content="43.6352;3.9137">
+    <meta name="ICBM" content="43.6352, 3.9137">
+    <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.0">
