--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -15,9 +15,17 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Expert en installation vidéosurveillance : caméras IP 4K, systèmes DVR/NVR, intelligence artificielle, détection thermique. Solutions professionnelles pour commerces et résidences.">
     <meta name="keywords" content="vidéosurveillance, caméras IP, DVR, NVR, installation sécurité, Hikvision, Dahua, intelligence artificielle, détection thermique">
+    <!-- Critical SEO Enhancement -->
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+    <meta name="revised" content="2025-01-25">
+    <meta name="author" content="ZOZO Sécurité">
+    <meta name="geo.region" content="FR-34">
+    <meta name="geo.position" content="43.6352;3.9137">
+    <meta name="ICBM" content="43.6352, 3.9137">
+    <meta name="geo.placename" content="Castelnau-le-Lez, France">
     <meta property="og:title" content="Installation Vidéosurveillance Professionnelle - ZOZO Sécurité">
     <meta property="og:description" content="Solutions complètes de vidéosurveillance avec expertise technique avancée">
-    <meta property="og:image" content="../images/og-image.jpg">
+    <meta property="og:image" content="../images/og-image.webp">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
@@ -29,6 +37,46 @@
       gtag('config', 'G-DERWVMJ868');
     </script>
     
+    <!-- Service Schema for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "@id": "https://www.zozosecurite.fr/services/videosurveillance.html",
+      "name": "Installation Vidéosurveillance Professionnelle",
+      "description": "Installation complète de systèmes de vidéosurveillance : caméras IP 4K, DVR/NVR, intelligence artificielle, détection thermique pour commerces et résidences dans l'Hérault.",
+      "provider": {
+        "@type": "LocalBusiness",
+        "@id": "https://www.zozosecurite.fr#organization",
+        "name": "ZOZO Sécurité",
+        "telephone": "+33767563926",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "1 place charles de gaulle",
+          "addressLocality": "Castelnau-le-Lez",
+          "postalCode": "34170",
+          "addressCountry": "FR"
+        }
+      },
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Montpellier"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Hérault"
+        }
+      ],
+      "serviceType": "Installation système de sécurité",
+      "category": "Sécurité électronique",
+      "offers": {
+        "@type": "Offer",
+        "description": "Installation complète avec devis gratuit",
+        "priceCurrency": "EUR"
+      }
+    }
+    </script>
 
 </head>
 
