doing a clean up

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <meta name="geo.position" content="43.6352;3.9137">
     <meta name="ICBM" content="43.6352, 3.9137">
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
     <meta property="og:title" content="Vidéosurveillance Montpellier | Installation Caméras Hérault">
     <meta property="og:description" content="Expert vidéosurveillance Montpellier. Caméras IP, DVR/NVR, câblage réseau. +500 installations. Devis gratuit">
     <meta property="og:image" content="https://www.zozosecurite.fr/images/zozosécuritélogo.jpg">
