--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -23,6 +23,8 @@
     <meta name="geo.position" content="43.6352;3.9137">
     <meta name="ICBM" content="43.6352, 3.9137">
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
     <meta property="og:title" content="Installation Vidéosurveillance Professionnelle - ZOZO Sécurité">
     <meta property="og:description" content="Solutions complètes de vidéosurveillance avec expertise technique avancée">
     <meta property="og:image" content="../images/og-image.webp">
@@ -36,6 +38,9 @@
 
       gtag('config', 'G-DERWVMJ868');
     </script>
+    
+    <!-- Umami Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
     
     <!-- Service Schema for SEO -->
     <script type="application/ld+json">
