--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,8 @@
     <meta name="geo.position" content="43.6352;3.9137">
     <meta name="ICBM" content="43.6352, 3.9137">
     <meta name="geo.placename" content="Castelnau-le-Lez, France">
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
     <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="stylesheet" href="css/navigation.css?v=2.0">
@@ -29,6 +31,9 @@
 
       gtag('config', 'G-DERWVMJ868');
     </script>
+    
+    <!-- Umami Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
     
 
 
@@ -67,6 +72,7 @@
                 <a href="index.html#services" class="nav-link">Services</a>
                 <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
                 <a href="index.html#realisations" class="nav-link">Réalisations</a>
+                <a href="blog.html" class="nav-link">Blog</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact-social">
@@ -103,6 +109,7 @@
         <a href="index.html#services" class="nav-link">Services</a>
         <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
         <a href="index.html#realisations" class="nav-link">Réalisations</a>
+        <a href="blog.html" class="nav-link">Blog</a>
 
                 <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
