--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    
+    <!-- Umami Analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="25b9aa4e-fff5-4000-bc16-1317c550461e"></script>
+    <!-- Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="D8B8E351453FE5423D10FC62F1D318E0" />
     <style>
         /* Add some basic styling for readability */
         body { padding: 2rem; line-height: 1.6; color: #eee; background-color: #1a1a1a; } /* Adjusted for dark theme */
