--- a/faq.html
+++ b/faq.html
@@ -39,13 +39,34 @@
 
     <script type="application/ld+json">
     {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Accueil",
+          "item": "https://www.zozosecurite.fr/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "FAQ",
+          "item": "https://www.zozosecurite.fr/faq.html"
+        }
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
      "@context":"https://schema.org",
      "@type":"FAQPage",
      "mainEntity":[
-      {"@type":"Question","name":"Quel est le coût moyen d’une installation de 4 caméras ?","acceptedAnswer":{"@type":"Answer","text":"À partir de 1 650 € HT, matériel et pose inclus."}},
+      {"@type":"Question","name":"Quel est le coût moyen d'une installation de 4 caméras ?","acceptedAnswer":{"@type":"Answer","text":"À partir de 1 650 € HT, matériel et pose inclus."}},
       {"@type":"Question","name":"Faut-il un permis pour filmer un parking privé ?","acceptedAnswer":{"@type":"Answer","text":"Oui : déclaration CNIL ou panneau RGPD si zone publique."}},
       {"@type":"Question","name":"Différence entre DVR et NVR ?","acceptedAnswer":{"@type":"Answer","text":"DVR pour coaxial, NVR pour caméras IP PoE."}},
-      {"@type":"Question","name":"Durée d’installation typique ?","acceptedAnswer":{"@type":"Answer","text":"En général 1 à 2 jours pour un commerce standard."}},
+      {"@type":"Question","name":"Durée d'installation typique ?","acceptedAnswer":{"@type":"Answer","text":"En général 1 à 2 jours pour un commerce standard."}},
       {"@type":"Question","name":"Puis-je voir mes caméras sur smartphone ?","acceptedAnswer":{"@type":"Answer","text":"Oui, appli iOS/Android sécurisée incluse."}},
       {"@type":"Question","name":"Les caméras filment-elles la nuit ?","acceptedAnswer":{"@type":"Answer","text":"Oui, infrarouge 30 m et modèle couleur basse lumière."}},
       {"@type":"Question","name":"Quelle maintenance est nécessaire ?","acceptedAnswer":{"@type":"Answer","text":"Nettoyage optique + vérif disque, 1× par an."}},
@@ -126,6 +147,20 @@
                     <path d="M17 12H7"/>
                 </svg>
             </a>
+        </div>
+    </nav>
+
+    <!-- Breadcrumb Navigation -->
+    <nav class="breadcrumb" aria-label="breadcrumb">
+        <div class="breadcrumb-container">
+            <ol class="breadcrumb-list">
+                <li class="breadcrumb-item">
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">
+                    FAQ
+                </li>
+            </ol>
         </div>
     </nav>
 
