--- a/blog.html
+++ b/blog.html
@@ -263,7 +263,7 @@
                 <!-- Blog Post 1 -->
                 <article class="blog-card" data-post="post1">
                     <div class="blog-image">
-                        <img src="images/blog/blogpost1.webp" alt="Caméras de sécurité moderne">
+                        <img src="images/blog/blogpost1.webp" alt="Caméras de sécurité moderne" loading="lazy">
                         <div class="blog-category">Guide</div>
                     </div>
                     <div class="blog-content">
@@ -301,7 +301,7 @@
                 <!-- Blog Post 2 -->
                 <article class="blog-card" data-post="post2">
                     <div class="blog-image">
-                        <img src="images/blog/blogpost2.webp" alt="Installation caméra sécurité">
+                        <img src="images/blog/blogpost2.webp" alt="Installation caméra sécurité" loading="lazy">
                         <div class="blog-category">Conseil</div>
                     </div>
                     <div class="blog-content">
