--- a/index.html
+++ b/index.html
@@ -190,9 +190,7 @@
 </head>
 <body>
 
-    <!-- Cursor elements -->
-    <div class="cursor"></div>
-    <div class="cursor-dot"></div>
+
 
     <!-- Logo -->
     <a href="#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
@@ -243,7 +241,7 @@
             <h1 class="hero-title">Expert <span class="highlight-word">Vidéosurveillance</span> Montpellier & <span class="highlight-word">Hérault</span></h1>
             <p class="hero-subtitle">Protection vidéo complète pour votre maison ou entreprise. <strong>Plus de 500 clients protégés</strong>. Devis gratuit sous <span class="highlight-montpellier">24h</span>.</p>
             <div class="cta-buttons">
-                <a href="contact.html" class="main-cta">Discutons de votre projet →</a>
+                <a href="contact.html" class="main-cta">Demander un devis gratuit →</a>
                 <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1uq3XNldlVkIyqdP6nE6Mrkbk6dAyTAFl6qYp4KJct5G0GeK5HQbD-UEY5NrWTdkZgklL-wR0W?gv=true" 
                    target="_blank" 
                    rel="noopener" 
@@ -324,7 +322,7 @@
 
                     <div class="about-cta">
                         <p class="about-promise"><em>"Votre sécurité, notre priorité. Des solutions simples et efficaces pour protéger ce qui compte pour vous."</em></p>
-                        <a href="contact.html" class="about-button">Discutons de votre projet →</a>
+                        <a href="contact.html" class="about-button">Demander un devis gratuit →</a>
                     </div>
                 </div>
 
@@ -340,7 +338,7 @@
                                 </a>
                             </div>
                         </div>
-                        <img src="images/realisations/image13.webp" alt="Installation vidéosurveillance ZOZO Sécurité - Exemple de nos réalisations professionnelles" class="about-image">
+                        <img src="images/realisations/image13.webp" alt="Installation vidéosurveillance ZOZO Sécurité - Exemple de nos réalisations professionnelles" class="about-image" loading="lazy">
                         <div class="image-frame"></div>
                         <div class="floating-badge">
                             <i class="fas fa-video"></i>
@@ -401,74 +399,74 @@
                 <!-- First set of logos -->
                 <div class="partner-logo">
                     <a href="https://www.lidl.fr" target="_blank" rel="noopener">
-                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète">
+                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.but.fr" target="_blank" rel="noopener">
-                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité">
+                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.bulgari.com" target="_blank" rel="noopener">
-                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée">
+                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.sephora.fr" target="_blank" rel="noopener">
-                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance">
+                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
-                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme">
+                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
-                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact">
+                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aldi.fr" target="_blank" rel="noopener">
-                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance">
+                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance" loading="lazy">
                     </a>
                 </div>
                 
                 <!-- Duplicate set for seamless carousel loop animation -->
                 <div class="partner-logo">
                     <a href="https://www.lidl.fr" target="_blank" rel="noopener">
-                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète">
+                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.but.fr" target="_blank" rel="noopener">
-                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité">
+                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.bulgari.com" target="_blank" rel="noopener">
-                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée">
+                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.sephora.fr" target="_blank" rel="noopener">
-                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance">
+                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
-                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme">
+                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
-                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact">
+                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact" loading="lazy">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aldi.fr" target="_blank" rel="noopener">
-                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance">
+                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance" loading="lazy">
                     </a>
                 </div>
             </div>
@@ -506,11 +504,11 @@
                 <h3>Nos Partenaires</h3>
                 <div class="brands-grid">
                     <div class="brand-card">
-                        <img src="images/Hikvision.png" alt="Logo Hikvision" class="brand-logo">
+                        <img src="images/Hikvision.png" alt="Logo Hikvision" class="brand-logo" loading="lazy">
                         <span>Hikvision</span>
                     </div>
                     <div class="brand-card">
-                        <img src="images/Dahua.svg" alt="Logo Dahua" class="brand-logo">
+                        <img src="images/Dahua.svg" alt="Logo Dahua" class="brand-logo" loading="lazy">
                         <span>Dahua</span>
                     </div>
                 </div>
