--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -377,14 +377,14 @@
                     <h3>Partenaires Privilégiés</h3>
                     <div class="partners-grid">
                         <div class="partner-card">
-                            <img src="../images/Hikvision.png" alt="Logo Hikvision" class="partner-logo">
+                            <img src="../images/Hikvision.png" alt="Logo Hikvision" class="partner-logo" loading="lazy">
                             <div class="partner-info">
                                 <h4>Hikvision</h4>
                                 <p>Analytics intelligentes à prix volume</p>
                             </div>
                         </div>
                         <div class="partner-card">
-                            <img src="../images/Dahua.svg" alt="Logo Dahua" class="partner-logo">
+                            <img src="../images/Dahua.svg" alt="Logo Dahua" class="partner-logo" loading="lazy">
                             <div class="partner-info">
                                 <h4>Dahua</h4>
                                 <p>Gammes multi-capteurs et thermiques robustes</p>
