--- a/contact.html
+++ b/contact.html
@@ -282,11 +282,11 @@
                     <div class="social-proof desktop-social-proof">
                         <h3>PARTENAIRES DE CONFIANCE</h3>
                         <div class="partner-logos">
-                            <img src="images/Lidl.png" alt="Lidl" class="partner-logo">
-                            <img src="images/aldi.png" alt="Aldi" class="partner-logo">
-                            <img src="images/BUT.png" alt="BUT" class="partner-logo">
-                            <img src="images/sephora.png" alt="Sephora" class="partner-logo">
-                            <img src="images/bvlgari.png" alt="Bvlgari" class="partner-logo">
+                            <img src="images/Lidl.png" alt="Lidl" class="partner-logo" loading="lazy">
+                            <img src="images/aldi.png" alt="Aldi" class="partner-logo" loading="lazy">
+                            <img src="images/BUT.png" alt="BUT" class="partner-logo" loading="lazy">
+                            <img src="images/sephora.png" alt="Sephora" class="partner-logo" loading="lazy">
+                            <img src="images/bvlgari.png" alt="Bvlgari" class="partner-logo" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -362,11 +362,11 @@
                      <div class="social-proof mobile-social-proof">
                          <h3>PARTENAIRES DE CONFIANCE</h3>
                          <div class="partner-logos">
-                             <img src="images/Lidl.png" alt="Lidl" class="partner-logo">
-                             <img src="images/aldi.png" alt="Aldi" class="partner-logo">
-                             <img src="images/BUT.png" alt="BUT" class="partner-logo">
-                             <img src="images/sephora.png" alt="Sephora" class="partner-logo">
-                             <img src="images/bvlgari.png" alt="Bvlgari" class="partner-logo">
+                             <img src="images/Lidl.png" alt="Lidl" class="partner-logo" loading="lazy">
+                             <img src="images/aldi.png" alt="Aldi" class="partner-logo" loading="lazy">
+                             <img src="images/BUT.png" alt="BUT" class="partner-logo" loading="lazy">
+                             <img src="images/sephora.png" alt="Sephora" class="partner-logo" loading="lazy">
+                             <img src="images/bvlgari.png" alt="Bvlgari" class="partner-logo" loading="lazy">
                          </div>
                      </div>
                  </div>
