creating a entrepots at montpellier page

--- a/services/videosurveillance-entrepot.html
+++ b/services/videosurveillance-entrepot.html
@@ -165,6 +165,54 @@
         </div>
     </section>
 
+    <!-- Camera Showcase Section -->
+    <section class="camera-showcase">
+        <div class="camera-showcase-container">
+            <div class="camera-showcase-header">
+                <h2 class="camera-showcase-title">Caméras <span class="highlight-text">Spécialisées</span> Entrepôt</h2>
+                <p class="camera-showcase-subtitle">Installation caméras surveillance entrepôt Hérault et Montpellier - Solutions professionnelles adaptées aux zones logistiques</p>
+            </div>
+            
+            <div class="cameras-grid">
+                <div class="camera-card">
+                    <div class="camera-image">
+                        <img src="../images/entrepots/DS-2CD2387G2-LU.webp" alt="Caméra Hikvision ColorVu DS-2CD2387G2-LU pour entrepôt" loading="lazy">
+                    </div>
+                    <div class="camera-info">
+                        <h3 class="camera-model">DS-2CD2387G2-LU</h3>
+                        <p class="camera-series">Série ColorVu</p>
+                        <p class="camera-description">
+                            Parfaite pour la surveillance des <strong>zones de stockage à faible éclairage</strong>. 
+                            Fournit des images couleur 24h/24 grâce à sa technologie ColorVu avancée, 
+                            éliminant les zones d'ombre typiques des entrepôts.
+                        </p>
+                        <div class="camera-highlight">
+                            <span class="highlight-feature">Vision couleur nocturne</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="camera-card">
+                    <div class="camera-image">
+                        <img src="../images/entrepots/IPC-HDW3849H-AS-PV.webp" alt="Caméra Dahua Full-Color IPC-HDW3849H-AS-PV pour entrepôt" loading="lazy" class="dahua-camera">
+                    </div>
+                    <div class="camera-info">
+                        <h3 class="camera-model">IPC-HDW3849H-AS-PV</h3>
+                        <p class="camera-series">Série Full-Color</p>
+                        <p class="camera-description">
+                            Idéale pour la <strong>protection périmétrique des entrepôts</strong>. 
+                            Détection intelligente avec alerte active et dissuasion intégrée, 
+                            parfaite pour sécuriser les accès et zones de chargement.
+                        </p>
+                        <div class="camera-highlight">
+                            <span class="highlight-feature">Détection périmétrique active</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Entrepot Features Section -->
     <section class="entrepot-features">
         <div class="entrepot-container">
