finished the entrepot page

--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -232,7 +232,7 @@
                             <span class="ai-icon">🎯</span>
                             <div>
                                 <strong>Détection d'intrusion intelligente</strong>
-                                <p>Réduction des fausses alarmes</p>
+                                <p>Détection intelligente précise</p>
                                 <div class="ai-feature-details">
                                     <p>Distingue entre humains, véhicules et animaux. Zones de détection personnalisables avec alertes instantanées sur mobile.</p>
                                 </div>
