--- a/services/videosurveillance-entrepot.html
+++ b/services/videosurveillance-entrepot.html
@@ -448,7 +448,7 @@
                         <i class="fas fa-shield-alt"></i>
                     </div>
                     <h3>Sécurité Périmétrique</h3>
-                    <p>Protection complète des accès et périmètres avec <strong>détection d'intrusion avancée</strong> et système d'alarme intégré.</p>
+                    <p>Protection complète des accès et périmètres avec <strong>détection d'intrusion avancée</strong> et surveillance périmétrique intelligente.</p>
                 </div>
                 
                 <div class="entrepot-card">
